--- a/js-tdd/package.json
+++ b/js-tdd/package.json
@@ -4,7 +4,9 @@
   "description": "Nossa lib js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "prepush": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/MarcusViniciusCavalcanti/js-tdd/issues"
   },
-  "homepage": "https://github.com/MarcusViniciusCavalcanti/js-tdd#readme"
+  "homepage": "https://github.com/MarcusViniciusCavalcanti/js-tdd#readme",
+  "devDependencies": {
+    "eslint": "^4.12.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "husky": "^0.14.3"
+  }
 }
