--- a/js-tdd/package.json
+++ b/js-tdd/package.json
@@ -4,7 +4,8 @@
   "description": "Nossa lib js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha test/**/*.spec.js",
+    "test:tdd": "./node_modules/.bin/mocha test/**/*.spec.js --watch",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint"
   },
@@ -24,9 +25,11 @@
   },
   "homepage": "https://github.com/MarcusViniciusCavalcanti/js-tdd#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.12.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "mocha": "^4.0.1"
   }
 }
